created panel for search bar, structured html comments and actual html for current day weather and structure comments for 5 day forecast cards

--- a/assets/style.css
+++ b/assets/style.css
@@ -38,8 +38,16 @@ form {
 
 
   
-  .left {
-    float: left;
-    margin-left: 10px;
-    
-}
+ .left {
+   float:left;
+   width: 500px;
+   height: 500px;
+   margin: 15px;
+ }
+
+ .right .forecast {
+  display: inline-block;
+  vertical-align: right;
+ }
+ 
+
