--- a/assets/style.css
+++ b/assets/style.css
@@ -49,5 +49,12 @@ form {
   display: inline-block;
   vertical-align: right;
  }
+
+ .card {
+   display: inline-block;
+   align-items: flex-end;
+   background-color:rgb(37, 37, 114) ;
+   color: white;
+ }
  
 
